--- a/index.qmd
+++ b/index.qmd
@@ -7,11 +7,11 @@ format:
 bibliography: packages.bib
 ---
 
-***Pages are under active construction*** (so many things won't look right!)
-
 These web pages compliment the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] which can vastly improve workflow (*welcome to the world beyond Excel*).
 
 [^1]: Quarto® is an open-source scientific and technical publishing system: see <https://quarto.org/>
+
+***Note: pages are under active construction*** (so many things won't look right!)
 
 ![](Images/homesunrise2.png)
 
