--- a/index.qmd
+++ b/index.qmd
@@ -8,15 +8,23 @@ bibliography: packages.bib
 number-sections: true
 ---
 
-These web pages compliment the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] which can vastly improve workflow (*welcome to the world beyond Excel*).
+These web pages compliment the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition, and hopefully encourage ecologists to make the most of their bat survey data. They also demonstrate literate programming with Quarto®[^1] and R Markdown[^10] which can vastly improve workflow (*welcome to the world beyond Excel*).
 
 [^1]: Quarto® is an open-source scientific and technical publishing system: see <https://quarto.org/>
-
-***Note: pages are under active construction*** (so some things won't look right!)
+[^10]: R Markdown see <https://rmarkdown.rstudio.com/>
 
 ![](Images/homesunrise2.png)
 
-To help ecologists get started, the code making all the graphs and analysis is freely available to copy and use; just click on  _Show the code_, copy to the clipboard [^2], paste into the R environment and run (to get going in R see @sec-installr). 
+Literate programming enables efficient reporting of bat data[^8] from a simple table, such as a count of bats,  to the output and interpretation of machine  learning ; plus everything in-between.  The code used in these pages is  R[^9], literate programming gives access to other coding languages such as Python[^6], and Julia[^7].  Coding languages can be mixed in the same literate programming document; with a chuck of R code doing the data manipulation  and another chunk of Python code performing the machine learning.  Coding languages applied to data science are developing rapidly in terms of their ability, speed of execution, and user friendliness[^5]; literate programming provides the framework for ecologists to keep their data science skills moving forward.
+
+[^5]:  Julia has a language syntax similar to Python, runs fast, has a statistical library like R and linear programming skills similar to MATLAB.
+[^6]: <https://www.python.org/>
+[^7]: <https://julialang.org/>
+[^8]:  as exported from sound analysis software
+[^9]:  Windows <https://cran.r-project.org/bin/windows/base/> Mac Intel & ARM <https://cran.r-project.org/bin/macosx/>
+
+
+To help ecologists get started, all the code making the graphs and analysis is freely available to copy and use; just click on  _Show the code_, copy to the clipboard [^2], paste into the R environment and run (to get going in R see @sec-installr). 
 
 [^2]: Clip board icon is in the top right hand corner of the code window.
 
@@ -114,8 +122,8 @@ knitr::write_bib(c('base',
 ```
 
 ```{r}
-#| echo=TRUE, 
-#| eval=FALSE
+#| code-fold: show
+#| eval: false
 
 install.packages("devtools")
 
