--- a/about.qmd
+++ b/about.qmd
@@ -2,11 +2,19 @@
 title: "About"
 ---
 
-![](Images/photo.jpg){fig-align="left"}
+::: {layout="[[35,65]]"}
+
+![](Images/photo.jpg)
+
+![](Images/goinghome.png)
+
+
+:::
+
 
 **Reporting Bat Survey Data** compliments the *data science* chapters of the forthcoming BCT Bat Survey Guidelines 4^th^ Edition. Unlike the guidelines it has the R code making the analysis; which can be copied and used.
 
-These web pages are written by Steve Markham, Director and Data Scientist at *Marquis & Lord Ltd.* Over my 40-year career I have developed and used software applications in water management and more recently, the last 15 years; applied *data science* to a wide range of projects using the R software environment. I have held a Natural England Roost Visitors Licence since 1997, and Survey and Research Licence Level 2; undertaking numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust from 2012 to 2021. As a Fellow of the Royal Statistical Society I advocate the importance of statistics and data. As a member of the editorial board of all editions of the Bat Survey Guidelines[^1], I encourage ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats!
+These web pages are written by __Steve Markham__, Director and Data Scientist at *Marquis & Lord Ltd.* Over my 40-year career I have developed and used software applications in water management and more recently, the last 15 years; applied *data science* to a wide range of projects using the R software environment. I have held a Natural England Roost Visitors Licence since 1997, and Survey and Research Licence Level 2; undertaking numerous commercial bat projects and voluntary bat work, including being a Trustee of the Bat Conservation Trust from 2012 to 2021. As a Fellow of the Royal Statistical Society I advocate the importance of statistics and data. As a member of the editorial board of all editions of the Bat Survey Guidelines[^1], I encourage ecologists to make the most of their bat survey data; these web pages hopefully make it easier to do this, and more rewarding - its good for bats!
 
 [^1]: There have been four editions (2007, 2012, 2016 and 2023), For the 4th edition (due early 2023), the sections on bat survey design and data analysis were completely revised to incorporate a data science approach to bat surveys: tidy data, data aggregation, visualization, statistical analysis, and reproducibility. The current version of the Bat Survey Guidelines can be found here: <https://www.bats.org.uk/resources/guidance-for-professionals/bat-surveys-for-professional-ecologists-good-practice-guidelines-3rd-edition>
 
@@ -17,3 +25,5 @@ This web site also introduces the `iBats` package[^2]. `iBats` is a package with
 <!-- The `iBats` name is borrowed from Prof Kate Jones and follows in the citizen science spirit of the original __iBats__. -->
 
 Finally a special thanks to the bat workers who have put up with my incessant data talk, especially: Amanda, Anna, Kevin, Liat, Phil, Richard and, Suzy.
+
+![](Images/homesunrise2.png)
